# agent-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .prettierrc.json.md  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  readiness-report.html  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/agents/: code-reviewer.agent.md  doc-writer.agent.md  test-generator.agent.md
.github/agents/code-reviewer/: agent.json
.github/agents/doc-writer/: agent.json
.github/agents/test-generator/: agent.json
.github/skills/generate-template/: README.md  SKILL.md  skill.json
.github/skills/run-tests/: README.md  SKILL.md  skill.json
.github/skills/validate-config/: README.md  SKILL.md  skill.json
.github/workflows/: ci.yml
src/agent_sync/: __init__.py  cli.py  config.py  console.py  dashboard.py  log_parser.py  models.py  plugin_validator.py  prober.py  scanner.py  serializers.py  sync_engine.py  user_config.py
src/agent_sync/formatters/: commands.py  mcp.py  skills.py
tests/: test_formatters.py  test_models.py  test_probe.py  test_scanner.py  test_serializers.py  test_sync_engine.py
